enable multiple upload with respective loading bar

--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="/lodash/lodash.js" type="text/javascript"></script>
+  <script src="/cloudinary-core/cloudinary-core.js" type="text/javascript"></script>
 </html>
