--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,6 +41,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="/lodash/lodash.js" type="text/javascript"></script>
-  <script src="/cloudinary-core/cloudinary-core.js" type="text/javascript"></script>
+  <!-- <script src="/lodash/lodash.js" type="text/javascript"></script>
+  <script src="/cloudinary-core/cloudinary-core.js" type="text/javascript"></script> -->
+  <script>
+    // window.kiss= {
+    //   me:'muah'
+    // }
+  </script>
 </html>
